@@ -3,4 +3,5 @@ FROM azul/zulu-openjdk-alpine:8
 ADD /target/forwardauth.jar forwardauth.jar
 
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "forwardauth.jar"]
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XshowSettings:vm"
+ENTRYPOINT java $JAVA_OPTS -jar forwardauth.jar
